Finished most of the write up

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -558,3 +558,30 @@
     year      = {2024},
     note      = {Cite This},
 }
+
+@misc{AntennaPiece,
+  author       = {Digitek},
+  title        = {Digitek 01BUWX18L 18 Elements Outer Metro UHF Antenna},
+  year         = {2024},
+  url          = {https://www.radioparts.com.au/product/00727310/01BUWX18L?CAWELAID=120007580000000894&pid=00727310&utm_source=google&utm_medium=cpc&utm_campaign=free+listings&srsltid=AfmBOorS_-NCsSPjXDTdu1etHVTp3Zth3AjjspabO7Co6JJ4kSspvgFE2RM},
+  note         = {Accessed: 2024-10-20}
+}
+
+@online{GeometryAttenuation,
+    author    = {Mason, J.},
+    title     = {Adaptive Streaming of High-Quality Audio over Low-Bitrate Networks},
+    year      = {2024},
+    journal   = {EBU Technical Review},
+    url       = {https://tech.ebu.ch/docs/techreview/trev_299-mason.pdf},
+    note      = {Accessed: October 20, 2024}
+}
+
+@techreport{SilentSentry,
+    title={Silent Sentry Passive Surveillance System},
+    author={Lockheed Martin Corporation},
+    year={2000},
+    url={https://www.mobileradar.org/Documents/Silent_Sentry.pdf},
+    note={Accessed: 2024-10-23}
+}
+
+
