--- a/eecs-thesis-template-main/thesis/sections/02_rear_matter/00_appendix.tex
+++ b/eecs-thesis-template-main/thesis/sections/02_rear_matter/00_appendix.tex
@@ -1,9 +1,27 @@
 \begin{appendices}
 \cleardoublepage
 
-\chapter{Utilised Code Listings}
+\chapter{Code and Results \label{sec:codeResults}}
 
-The code used throughout this 
+\section{GitHub Repository}
+
+The code used throughout this project can be found at the following link. 
+
+\vspace{1cm}
+\href{https://github.com/flynnmkelly/PassiveRadarThesis/tree/main}{https://github.com/flynnmkelly/PassiveRadarThesis/tree/main}
+
+\vspace{1cm}
+\noindent{}
+Specifically, the code running via crontab on the Raspberry Pi 5  can be viewed in the \textit{RPi5 Testbed Final} directory.
+
+\section{Youtube Channel with Demonstration}
+
+The links below show the demonstration of the testbed in action, along with some of the GIF RDM output:
+
+\vspace{1cm}
+\href{www.youtube.com/@flynnkelly5098}{www.youtube.com/@flynnkelly5098}
+
+
 
 \chapter{System Intialization and Testing}
 
